--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header class="encabezado flex">
         <div>
-            <img src="../Proyecto final - Comes Brunetto Evangelina/imagenes/logo-manage.png" alt="logo">
+            <img src="../imagenes/logo-manage.png" alt="logo">
         </div>
         <nav class="top_navmenu mobile-hide">
             <ul type="none">
