modifique carpeta imagenes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header class="encabezado flex">
         <div>
-            <img src="../Proyecto final - Comes Brunetto Evangelina/imagenes/logo-manage.png" alt="logo">
+            <img src="../imagenes/logo-manage.png" alt="logo">
         </div>
         <nav class="top_navmenu mobile-hide">
             <ul type="none">
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <button type="button" class="mobile-hide bkg-orange">Get Started</button>
-        <a href="#" class="mobile-show"><img src="../Proyecto final - Comes Brunetto Evangelina/imagenes/icon-hamburger.svg"
+        <a href="#" class="mobile-show"><img src="../imagenes/icon-hamburger.svg"
                 alt="menu-cel"></a>
 
     </header>
@@ -44,8 +44,8 @@
                 <button type="button" class="bkg-orange">Get Started</button>
             </div>
             <div class="left-box">
-                <img src="../Proyecto final - Comes Brunetto Evangelina/imagenes/illustration-intro.svg" class="grafico" alt="grafico">
-                <img src="../Proyecto final - Comes Brunetto Evangelina/imagenes/bg-simplify-section-desktop.svg" class="grafico"
+                <img src="../imagenes/illustration-intro.svg" class="grafico" alt="grafico">
+                <img src="../imagenes/bg-simplify-section-desktop.svg" class="grafico"
                     alt="">
             </div>
 
@@ -110,7 +110,7 @@
             <div class="testimonios">
 
                 <div class="person">
-                    <div class="photo person1"><img src="../Proyecto final - Comes Brunetto Evangelina/imagenes/avatar-anisha.png"
+                    <div class="photo person1"><img src="../imagenes/avatar-anisha.png"
                             alt="anisha"></div>
                     <div class="info-person1">
                         <p class="name">Anisha Li</p>
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="person mobile-hide">
-                    <div class="photo person2"><img src="../Proyecto final - Comes Brunetto Evangelina/imagenes/avatar-ali.png"
+                    <div class="photo person2"><img src="../imagenes/avatar-ali.png"
                             alt="ali"></div>
                     <div class="info-person2">
                         <p class="name">Ali Bravo</p>
@@ -134,7 +134,7 @@
                 </div>
 
                 <div class="person mobile-hide">
-                    <div class="photo person3"><img src="../Proyecto final - Comes Brunetto Evangelina/imagenes/avatar-richard.png"
+                    <div class="photo person3"><img src="../imagenes/avatar-richard.png"
                             alt="richard"></div>
                     <div class="info-person3">
                         <p class="name">Richard Watts</p>
@@ -158,7 +158,7 @@
     <footer class="footer flex">
 
         <div class="redes">
-            <img src="../Proyecto final - Comes Brunetto Evangelina/imagenes/logo-blanco.png" alt="logo-blanco">
+            <img src="../imagenes/logo-blanco.png" alt="logo-blanco">
 
             <div class="iconos-redes flex">
                 <a href="#" title="facebook"><i class="fa-brands fa-facebook-square fa-2x"></i></a>
